fixed blurry canvas

--- a/srcJS/client/game/game.css
+++ b/srcJS/client/game/game.css
@@ -1,70 +1,38 @@
 #main {
-    position:absolute;
+    position: absolute;
+    margin: auto;
+    width: 100%;
     top: 0%;
     bottom: 0%;
     left: 0%;
-    margin:auto;
-    width: 100%;
     aspect-ratio: 16/9;
+    background-color: white;
 }
 #top {
-    position: relative;
+    height: 87.5%;
     width: 100%;
-    height: 85%;
-}
-#bottom {
-    position: relative;
-    width: 100%;
-    height: 15%;
-}
-#game {
-    background-color: black;
-    position: relative;
-    width: 85%;
-    height: 100%;
+    background-color: red;
 }
 #roles {
-    position: relative;
-    width: 15%;
     height: 100%;
+    width: 12.5%;
+    background-color: green;
     float: right;
 }
-#captainRole {
-    position: relative;
+#bottom {
     width: 100%;
-    height: 25%;
-    color: black;
-    font-size: 300%;
+    height: 12.5%;
+    background-color: blue;
 }
-#scoutRole {
-    position: relative;
-    width: 100%;
-    height: 25%;
-    font-size: 200%;
-}
-#shooterRole {
-    position: relative;
-    width: 100%;
-    height: 25%;
-    font-size: 200%;
-}
-#medicRole {
-    position: relative;
-    width: 100%;
-    height: 25%;
-    font-size: 200%;
-}
-#status {
-    background-color: greenyellow;
-    position: relative;
-    width: 85%;
-    height: 100%;
-}
-
 #return {
-    position: relative;
-    width: 15%;
     height: 100%;
+    width: 12.5%;
     float: right;
     color: black;
+}
+.roleSelectButton {
+    width: 100%;
+    height: 25%;
+    color: black;
+    font-size: 200%;
 }
